--- a/CompetitiveTest/MainWindow.xaml
+++ b/CompetitiveTest/MainWindow.xaml
@@ -2,5 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:SSU.CompetitiveTest.Play"
-        Title="Ігрова платформа" Height="415.319" Width="672">
+        WindowStartupLocation="CenterScreen"
+        Title="Gaming platform" Height="415.319" Width="672">
+    <local:GameUI/>
 </Window>
